2004-04-03  Benjamin Otte  <otte@gnome.org>

	* docs/pwg/building-boiler.xml:
	  add cvs login line and s/anonymous/anoncvs/

2004-04-03  Tim-Phillip Müller  <t.i.m@zen.co.uk>

	reviewed by Benjamin Otte  <otte@gnome.org>

	* gst/gststructure.c: (gst_structure_free):
	  memleak fix: free fields array (partial fix for #134839)

2004-04-01  Ronald Bultje  <rbultje@ronald.bitfreak.net>

	* docs/random/ds/0.9-suggested-changes:
	  Add a note to change handoff use in fakesrc to be usable in
	  a more generic way (fakesrc should be renamed to appsrc or so).
	* gst/elements/gstfakesrc.c: (gst_fakesrc_class_init):
	  Change signal type to scope, so we can fill the buffer in the
	  handoff handler (that's the whole use of this signal...).

2004-04-01  Ronald Bultje  <rbultje@ronald.bitfreak.net>

	* docs/pwg/other-ntoone.xml:
	  Document muxers and n-to-1 elements.

2004-04-01  Martin Soto  <martinsoto@users.sourceforge.net>

	* gst/registries/gstxmlregistry.c
	(gst_xml_registry_rebuild_recurse): Fix the algorithm to
	determine if a file is a G_MODULE. The old one discards paths
	containing "so" somewhere in the middle. My home directory is
	called "soto". Go figure...

2004-03-31  David Schleef  <ds@schleef.org>

	* gst/gstbuffer.c: (gst_buffer_join):  Add function gst_buffer_join()
	to eventually deprecate gst_buffer_merge().  (bug: #136408)
	* gst/gstbuffer.h:

2004-03-31  David Schleef  <ds@schleef.org>

	* gst/gstvalue.c: (gst_value_union_int_int_range),
	(gst_value_union_int_range_int_range), (gst_value_can_union),
	(gst_value_union), (_gst_value_initialize):  Add some union
	implementations.  We didn't have any previously.
	* testsuite/caps/Makefile.am:
	* testsuite/caps/audioscale.c: (gst_audioscale_expand_value),
	(gst_audioscale_getcaps), (test_caps), (main): A little test
	that is the same as the caps manipulation in audioscale.

2004-03-30  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* docs/faq/general.xml:
	  add entry about "does gst support format X?"
