@@ -1,5 +1,16 @@
 2004-04-03  Benjamin Otte  <otte@gnome.org>
 
+	* gst/autoplug/gstspider.c: (gst_spider_identity_plug):
+	* gst/gstinfo.h:
+	* testsuite/debug/category.c: (main):
+	* testsuite/debug/commandline.c: (main):
+	* testsuite/debug/output.c: (main):
+	* testsuite/debug/printf_extension.c: (main):
+	  fix to successfully build and test with --disable-gst-debug
+	  configure switch
+
+2004-04-03  Benjamin Otte  <otte@gnome.org>
+
 	* docs/pwg/building-boiler.xml:
 	  add cvs login line and s/anonymous/anoncvs/
 
